add installation mdx page

--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -2,3 +2,15 @@
 title: Installation
 description: How to install dependencies and structure your app.
 ---
+
+You don't need to install it as a dependency instead you can simply copy and paste the code, as shadcn/ui, into your project. However, you still need to install the other dependency that the code needs.
+
+## Requirements
+
+1. **TailwindCSS**: We use TailwindCSS for styling. See the [TailwindCSS documentation](https://tailwindcss.com/docs/installation) for more information.
+
+2. **Framer Motion** : All of the animations and animated components are using Framer Motion. See the [Framer Motion documentation](https://www.framer.com/api/motion/) for more information.
+
+3. **Lucide Icons**: Some components use [Lucide Icons](https://lucide.dev/guide/packages/lucide-react) or [Radix Icons](https://radix-ui.com/icons). You can use any other icon library or SVG icons as well.
+
+## Setting up
